Donate Today section added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Let’s Help Those Who Are More In Need</h1>
+    <section>
+        <div class="cover-banner"> </div>
+        <div class="cover-text">
+            <h1>Let's help the needy <br> Misssion Sylhet</h1>
+            <p>Floods paralysing Sylhet. Around 13 lakh people were affected in Sylhet city. As a part of the emergency response, we distribute food among the people in the flood-affected area.
+            </p><a class="donate-button" target="_blank" href="https://www.bidyanondo.org/">Donate Now</a>
+        </div>
+    </section>
+    <section>
+        <div class="donate-today">
+            <h1>Donate Today</h1>
+            <p>Donations change and save lives. Every single penny that <br> you donate is used solely for charitable efforts.</p>
+        </div>
+        <div class="donation-box">
+            <h3 class="donation-box-without-color">50tk</h3>
+            <h3 class="donation-box-without-color">100tk</h3>
+            <h3 class="donation-box-color">500tk</h3>
+            <h3 class="donation-box-without-color">1000tk</h3>
+            <h3 class="donation-box-without-color">5000tk</h3>
+        </div>
+        <div class="input-box">
+            <input class="input-box" type="text" placeholder="Other Amount (Taka)"> 
+            <hr>
+            <button>Donate Now</button>
+        </div>
+    </section>
+
 </body>
 </html>
