Donate Plan added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
         <div class="donate-today">
             <h1>Donate Today</h1>
-            <p>Donations change and save lives. Every single penny that <br> you donate is used solely for charitable efforts.</p>
+            <p>Donations change and save lives. Every single penny <br> that you donate is used solely for charitable efforts.</p>
         </div>
         <div class="donation-box">
             <h3 class="donation-box-without-color">50tk</h3>
@@ -35,6 +35,29 @@
             <input class="input-box" type="text" placeholder="Other Amount (Taka)"> 
             <hr>
             <button>Donate Now</button>
+        </div>
+    </section>
+    <section>
+        <div class="donate-plan">
+            <h1>Our Donate Plan</h1>
+            <p>Our Charity programs provide support in some of <br> the poorest and most underprivileged regions.</p>
+        </div>
+        <div id="donate-plan">
+            <div class="food">
+                <img src="icons/food.png" height="50px" width="50px" alt="">
+                <h2>Food for a family</h2>
+                <p>People who live from hand to mouth are struggling for food. The situation is aggravated by the Covid-19 surge and economic crisis.</p>
+            </div>
+            <div class="shelter">
+                <img src="icons/shelter.png" height="50px" width="50px" alt="">
+                <h2>Shelter for a family</h2>
+                <p>People who live from hand to mouth are struggling for food. The situation is aggravated by the Covid-19 surge and economic crisis.</p>
+            </div>
+            <div class="education">
+                <img src="icons/icon4.svg" height="50px" width="50px" alt="">
+                <h2>Education for a child</h2>
+                <p>People who live from hand to mouth are struggling for food. The situation is aggravated by the Covid-19 surge and economic crisis.</p>
+            </div>
         </div>
     </section>
 
