Contribute section added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="cover-text">
             <h1>Let's help the needy <br> Misssion Sylhet</h1>
             <p>Floods paralysing Sylhet. Around 13 lakh people were affected in Sylhet city. As a part of the emergency response, we distribute food among the people in the flood-affected area.
-            </p><a class="donate-button" target="_blank" href="https://www.bidyanondo.org/">Donate Now</a>
+            </p>
+            <a class="donate-button" target="_blank" href="https://www.bidyanondo.org/">Donate Now</a>
         </div>
     </section>
     <section>
@@ -58,6 +59,28 @@
                 <h2>Education for a child</h2>
                 <p>People who live from hand to mouth are struggling for food. The situation is aggravated by the Covid-19 surge and economic crisis.</p>
             </div>
+        </div>
+    </section>
+    <section class="flexible-section">
+        <div class="half-width extra-class-2">
+            <h1>Their lives depend on your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="extra-class-1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <a class="contribute-button" target="_blank" href="https://www.bidyanondo.org/">How to Contribute?</a>
+        </div>
+        <div class="half-width">
+            <img src="images/donation8.jpg" alt="" srcset="">
+        </div>
+    </section>
+    <section class="flexible-section">
+        <div class="half-width">
+            <img src="images/donation13.jpg" alt="" srcset="">
+        </div>
+        <div class="hlaf-width extra-class-3">
+            <h1>They need us to suvive</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="extra-class-1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <a class="contribute-button" target="_blank" href="https://www.bidyanondo.org/">How to Contribute?</a>
         </div>
     </section>
 
