subscribe section added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
             <a class="contribute-button" target="_blank" href="https://www.bidyanondo.org/">How to Contribute?</a>
         </div>
     </section>
-
+    <section>
+        <div class="update">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam <br> falli deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="email-box">
+            <input type="email" placeholder="Email">
+            <button class="subscribe-button">Subscribe</button>
+        </div>
+    </section>
 </body>
 </html>
