--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     <section class="flexible-section">
         <div class="half-width extra-class-2">
             <h1>Their lives depend on your donation</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-            <p class="extra-class-1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <p>Around 13 lakh people were affected in Sylhet city, including five Upazilas. 
+                Surma and the Kushiyara rivers started flowing above the danger level.</p>
+            <p class="extra-class-1">The heavy torrential rainfall in the north-eastern region.</p>
             <a class="contribute-button" target="_blank" href="https://www.bidyanondo.org/">How to Contribute?</a>
         </div>
         <div class="half-width">
@@ -78,20 +79,39 @@
         </div>
         <div class="hlaf-width extra-class-3">
             <h1>They need us to suvive</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-            <p class="extra-class-1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <p>Some families have taken shelter in higher grounds, but many more live in waist-high water, with no place to go. 13 lakh people are water-bound.</p>
+            <p class="extra-class-1">As a part of the emergency response, Our volunteer team is working on the spot.</p>
             <a class="contribute-button" target="_blank" href="https://www.bidyanondo.org/">How to Contribute?</a>
+        </div>
+    </section>
+    <section class="flexible-section about-us">
+        <div class="about-us-class">
+            <img src="images/donation5.jpg" alt="" srcset="">
+        </div>
+        <div class="about-us-class about-us-text">
+            <h1>About Us</h1>
+            <p>
+                A passionate group of people who wishes to inspire a nation and beyond. Our organization is an educational voluntary organization that originated from Bangladesh.
+            </p>
+            <a class="about-us-button" target="_blank" href="https://www.bidyanondo.org/">About Us</a>
+            <a class="about-us-button" target="_blank" href="https://www.bidyanondo.org/">Contract us</a>
         </div>
     </section>
     <section>
         <div class="update">
-            <h1>Get My Updates</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam <br> falli deterruisset. No duo populo animal noluisse, enim</p>
+            <h1>Join Us</h1>
+            <p>We need your support to spread our services and <br> bring happiness through a cooperation and team work.</p>
         </div>
         <div class="email-box">
             <input type="email" placeholder="Email">
             <button class="subscribe-button">Subscribe</button>
         </div>
+    </section>
+    <section>
+        <footer>
+            <h1>Be Humble</h1>
+            <h5>I'm gonna do it</h5>
+        </footer>
     </section>
 </body>
 </html>
