--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Let's help the needy <br> Misssion Sylhet</h1>
             <p>Floods paralysing Sylhet. Around 13 lakh people were affected in Sylhet city. As a part of the emergency response, we distribute food among the people in the flood-affected area.
             </p>
-            <a class="donate-button" target="_blank" href="https://www.bidyanondo.org/">Donate Now</a>
+            <a class="donate-button" target="_blank" href="https://www.google.com/">Donate Now</a>
         </div>
     </section>
     <section>
@@ -62,12 +62,12 @@
         </div>
     </section>
     <section class="flexible-section">
-        <div class="half-width extra-class-2">
+        <div class="half-width contribute-1">
             <h1>Their lives depend on your donation</h1>
             <p>Around 13 lakh people were affected in Sylhet city, including five Upazilas. 
                 Surma and the Kushiyara rivers started flowing above the danger level.</p>
             <p class="extra-class-1">The heavy torrential rainfall in the north-eastern region.</p>
-            <a class="contribute-button" target="_blank" href="https://www.bidyanondo.org/">How to Contribute?</a>
+            <a class="contribute-button" target="_blank" href="https://www.google.com/">How to Contribute?</a>
         </div>
         <div class="half-width">
             <img src="images/donation8.jpg" alt="" srcset="">
@@ -77,11 +77,11 @@
         <div class="half-width">
             <img src="images/donation13.jpg" alt="" srcset="">
         </div>
-        <div class="hlaf-width extra-class-3">
+        <div class="hlaf-width contribute-2">
             <h1>They need us to suvive</h1>
             <p>Some families have taken shelter in higher grounds, but many more live in waist-high water, with no place to go. 13 lakh people are water-bound.</p>
             <p class="extra-class-1">As a part of the emergency response, Our volunteer team is working on the spot.</p>
-            <a class="contribute-button" target="_blank" href="https://www.bidyanondo.org/">How to Contribute?</a>
+            <a class="contribute-button" target="_blank" href="https://www.google.com/">How to Contribute?</a>
         </div>
     </section>
     <section class="flexible-section about-us">
@@ -93,8 +93,8 @@
             <p>
                 A passionate group of people who wishes to inspire a nation and beyond. Our organization is an educational voluntary organization that originated from Bangladesh.
             </p>
-            <a class="about-us-button" target="_blank" href="https://www.bidyanondo.org/">About Us</a>
-            <a class="about-us-button" target="_blank" href="https://www.bidyanondo.org/">Contract us</a>
+            <a class="about-us-button" target="_blank" href="https://www.google.com/">About Us</a>
+            <a class="about-us-button" target="_blank" href="https://www.google.com/">Contract us</a>
         </div>
     </section>
     <section>
