--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="hlaf-width contribute-2">
             <h1>They need us to suvive</h1>
             <p>Some families have taken shelter in higher grounds, but many more live in waist-high water, with no place to go. 13 lakh people are water-bound.</p>
-            <p class="extra-class-1">As a part of the emergency response, Our volunteer team is working on the spot.</p>
+            <p class="extra-class-1">As a part of the emergency response, Our volunteer team is working on the spot</p>
             <a class="contribute-button" target="_blank" href="https://www.google.com/">How to Contribute?</a>
         </div>
     </section>
