--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section>
         <div class="donate-today">
-            <h1>Donate Today</h1>
+            <h1>Donate Today!</h1>
             <p>Donations change and save lives. Every single penny <br> that you donate is used solely for charitable efforts.</p>
         </div>
         <div class="donation-box">
